--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#607D8B</color>
-    <color name="colorPrimaryDark">#37474F</color>
-    <color name="colorAccent">#FFC107</color>
+    <color name="colorPrimary">@color/colorBlueBase</color>
+    <color name="colorPrimaryDark">@color/colorBlueBase</color>
+    <color name="colorSecondary">@color/colorBlueLighter</color>
+    <color name="colorAccent">@color/colorYellowBase</color>
+
+    <color name="colorBlueBase">#3A4BF6</color>
+    <color name="colorBlueLighter">#5679DF</color>
+    <color name="colorYellowBase">#FBDE46</color>
+    <color name="colorPeachLow">#F4ECFE</color>
 </resources>
