--- a/app/src/main/res/drawable/round_button_3d.xml
+++ b/app/src/main/res/drawable/round_button_3d.xml
@@ -26,7 +26,7 @@
     <!-- Main button -->
     <item android:top="16dp" android:left="16dp" android:right="16dp" android:bottom="16dp">
         <shape android:shape="oval">
-            <solid android:color="#FFC107" />
+            <solid android:color="@color/colorYellowBase" />
         </shape>
     </item>
 
