--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         android:layout_marginBottom="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_start_recording" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_start_recording"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/btn_start_recording"
@@ -34,7 +36,9 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/activity_main_tv_db"
@@ -48,7 +52,21 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="36dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_start_recording" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_start_recording"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/activity_main_chart"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_db"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="0dp"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
